Changed column names

--- a/TestProfileApp/templates/user_list.html
+++ b/TestProfileApp/templates/user_list.html
@@ -36,8 +36,8 @@
             <a href="http://127.0.0.1:8000">Back to User Form</a>
             <table id='users'>
                 <tr>
-                    <th>Firstname</th>
-                    <th>Lastname</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
                 </tr>
                 {% for user in userList %}
                 <tr>
